@@ -12,3 +12,4 @@ Andreas Scholta   andreas.scholta at gmail com
 Philippe Brochard hocwp at free fr
 Matthew Kennedy   mkennedy at gentoo org
 Phil Gregory      phil_g at pobox com
+Jeremy Hankins    nowan at nowan org
